--- a/public/view.html
+++ b/public/view.html
@@ -6,14 +6,14 @@
   <link rel="icon" href="img/resume-favicon.png" type="image/x-icon">
 
   <title>View Applications</title>
-  
+
 
 
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="styles/styles.css"> 
+  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 
 
   <!--Font Awesome-->
@@ -24,7 +24,8 @@
 
   <!--Boostrap JavaScript-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 </head>
 
@@ -33,28 +34,28 @@
     <div id="row>">
       <div id="col-lg-12">
 
-      <!--Nav Bar-->
-<div class="topnav">
-    <a href="#home" class="active" id="resume1">Resume Tracker</a>
-    <!-- Nav Links-->
-    <div id="myLinks">
-      <a href="index.html">Home</a>
-      <a href="add.html">Add New Application</a>
-      <a href="view.html">View Applications</a>
-    </div>
+        <!--Nav Bar-->
+        <div class="topnav">
+          <a href="#home" class="active" id="resume1">Resume Tracker</a>
+          <!-- Nav Links-->
+          <div id="myLinks">
+            <a href="index.html">Home</a>
+            <a href="add.html">Add New Application</a>
+            <a href="view.html">View Applications</a>
+          </div>
 
-    <!--Nav Menu-->
-    <a href="javascript:void(0);" class="icon" onclick="myMenu()"><i class="fa fa-bars"></i></a>
-  </div>
-      <h1>View All Applications</h1>
-      <p id="dots">•••</p>
-      <a href="index.html" class="btn btn-danger btn-lg" id="home-view">Home</a>
-      <a href="add.html" class="btn btn-danger btn-lg" id="new-app-view">Add New Application</a>
-      <h3>See where you've applied to</h3>
-      <hr>
+          <!--Nav Menu-->
+          <a href="javascript:void(0);" class="icon" onclick="myMenu()"><i class="fa fa-bars"></i></a>
+        </div>
+        <h1>View All Applications</h1>
+        <p id="dots">•••</p>
+        <a href="index.html" class="btn btn-danger btn-lg" id="home-view">Home</a>
+        <a href="add.html" class="btn btn-danger btn-lg" id="new-app-view">Add New Application</a>
+        <h3>See where you've applied to</h3>
+        <hr>
+      </div>
     </div>
-    </div>
-      <div id=container>
+    <div id=container>
 
     </div>
     <div class="row">
@@ -62,82 +63,53 @@
         <div class="card" id="database">
           <div class="card-body" id="well-section">
 
-<div id ="job-list">
-<!--Table-->
-<table class="table">
-    <thead class="thead-dark">
-      <tr>
-          <th scope="col">#</th>
-          <th scope="col">Company</th>
-          <th scope="col">Role</th>
-          <th scope="col">Date Applied</th>
-          <th scope="col">Days Since Applied</th>
-          <th></th>
-          <th></th>
-      </tr>
-    </thead>
+            <div id="job-list">
+              <table class="table">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Company</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Date Applied</th>
+                    <th scope="col">Days Since Applied</th>
+                    <th></th>
+                    <th></th>
+                  </tr>
+                </thead>
 
-    <tbody>
+                <tbody id="display-info">
+                </tbody>
+              </table>
 
-      <tr id="row1">
-        <th scope="row">1</th>
-        <td id="company"></td>
-        <td id="role"></td>
-        <td id="date"></td>
-        <td id="days"></td>
-        <td><button id="edit">Edit</button></td>
-        <td><button id="delete">Delete</button></td>
-      </tr>
+            </div>
+          </div>
+        </div>
+      </div><br><br><br>
 
-      <tr id="row2">
-        <th scope="row">2</th>
-        <td id="company"></td>
-        <td id="role"></td>
-        <td id="date"></td>
-        <td id="days"></td>
-        <td><button id="edit">Edit</button></td>
-        <td><button id="delete">Delete</button></td>
-      </tr>
-
-      <tr id="row1">
-        <th scope="row">3</th>
-        <td id="company"></td>
-        <td id="role"></td>
-        <td id="date"></td>
-        <td id="days"></td>
-        <td><button id="edit">Edit</button></td>
-        <td><button id="delete">Delete</button></td>
-      </tr>
-
-    </tbody>
-  </table>
-</div>
-</div>
-</div>
-</div><br><br><br>
-
-<!--Footer-->
-<footer>
-  Copyright© 2019 Resume Tracker
-</footer>
-</div>
+      <!--Footer-->
+      <footer>
+        Copyright© 2019 Resume Tracker
+      </footer>
+    </div>
 </body>
-    
+
 <!--JavaScript-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
 <script src="/js/job.js" type="text/javascript"></script>
 
 <script>
 
-// Nav Menu Display
+  // Nav Menu Display
   function myMenu() {
-      var x = document.getElementById("myLinks");
-      if (x.style.display === "block") {
-        x.style.display = "none";
-      } else {
-        x.style.display = "block";
-      }
+    var x = document.getElementById("myLinks");
+    if (x.style.display === "block") {
+      x.style.display = "none";
+    } else {
+      x.style.display = "block";
     }
-  
+  }
+
 
 
   $(document).ready(function () {
